<!-- res/layout/fragment_filter.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        style="@style/MainAppTheme.Detail.Size.Bold"
        android:id="@+id/textViewFilterBreweryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_type"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerBreweryType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFilterBreweryType"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/brewery_types"
        android:spinnerMode="dropdown"/>

    <TextView
        style="@style/MainAppTheme.Detail.Size.Bold"
        android:id="@+id/textViewFilterState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerBreweryType"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_state"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFilterState"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/states"
        android:spinnerMode="dropdown"/>

    <TextView
        style="@style/MainAppTheme.Detail.Size.Bold"
        android:id="@+id/textViewFilterPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerState"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_postal"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFilterPostalCode"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text"
        android:inputType="text"
        android:padding="8dp" />

    <TextView
        style="@style/MainAppTheme.Detail.Size.Bold"
        android:id="@+id/textViewFilterCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPostalCode"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_city"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFilterCity"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:background="@android:drawable/edit_text"
        android:padding="8dp"/>

    <TextView
        style="@style/MainAppTheme.Detail.Size.Bold"
        android:id="@+id/textViewFilterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCity"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_name"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFilterName"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:background="@android:drawable/edit_text"
        android:padding="8dp"/>

    <Button
        android:id="@+id/action_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="16dp"
        android:text="@string/action_apply" />

    <Button
        android:id="@+id/action_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_apply"
        android:layout_marginTop="8dp"
        android:text="@string/action_cancel" />

    <Button
        android:id="@+id/action_no_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_cancel"
        android:layout_marginTop="8dp"
        android:text="@string/action_no_filter" />
</RelativeLayout>
