<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextStartingAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/starting_address_hint"
        android:padding="@dimen/doubleSpacing"
        android:layout_marginStart="@dimen/halfSpacing"
        android:layout_marginEnd="@dimen/halfSpacing"
        android:inputType="text"
        android:background="@android:drawable/edit_text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/doubleSpacing"
        android:layout_marginStart="@dimen/halfSpacing"
        android:layout_marginEnd="@dimen/halfSpacing"
        android:hint="@string/destination_address_hint"
        android:inputType="text"
        android:background="@android:drawable/edit_text" />

    <Button
        android:id="@+id/action_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doubleSpacing"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginEnd="@dimen/spacing"
        android:enabled="false"
        android:text="@string/action_find_directions" />

</LinearLayout>